add styles and search results render

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,11 +5,15 @@
     align-items: center;
 
     .search-container {
-
+        width: 40%;
     }
 
     .results-container {
-
+        width: 80%;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        margin-top: 50px;
     }
 
     .modal-container {
