--- a/src/components/Results/Results.scss
+++ b/src/components/Results/Results.scss
@@ -1,3 +1,7 @@
+.empty-store-message {
+    font-size: 1.5rem;
+    font-style: italic;
+}
 .book-wrapper {
     border-radius: 20px;
     border: 1px solid #ccc;
