--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -7,10 +7,17 @@
         height: 20px;
         width: 90%;
         font-size: 1rem;
-        padding: 2.5px 5px;
+        padding: 5px 10px;
         outline: none;
         margin-right: 10px;
         border-radius: 13px;
+        border: 1px solid #ffffff;
+        border-bottom-color: #324aa8;
+        transition: border .22s linear;
+
+        &:focus {
+            border: 1px solid #324aa8;
+        }
     }
 
     .search-button {
@@ -18,6 +25,18 @@
         height: 30px;
         width: 70px;
         outline: none;
+        border: none;
+        background-color: inherit;
+        border-radius: 20px;
+        transition: background-color .22s linear;
 
+        &:hover {
+            color: #ffffff;
+            background-color: rgba($color: #324aa8, $alpha: 1);
+        }
+
+        &:active {
+            background-color: rgba($color: #324aa8, $alpha: .6);
+        }
     }
 }
