add modal logic, styles and namespace

--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -28,7 +28,7 @@
         border: none;
         background-color: inherit;
         border-radius: 20px;
-        transition: background-color .22s linear;
+        transition: background-color, color .22s linear;
 
         &:hover {
             color: #ffffff;
