Добавлена логика работы модального окна, SCSS modules, логика отображения обложек книг

--- a/src/components/Results/Results.module.scss
+++ b/src/components/Results/Results.module.scss
@@ -1,8 +1,8 @@
-.empty-store-message {
+.emptyStoreMessage {
     font-size: 1.5rem;
     font-style: italic;
 }
-.book-wrapper {
+.bookWrapper {
     border-radius: 20px;
     border: 1px solid #ccc;
     display: flex;
